# pdfsearchable

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 01-fluxo-funcionamento.md  02-funcionalidades.md  03-CLI.md  04-report.md  05-logs-e-auditoria.md  06-UX-UI.md  07-performance.md  08-processamento-indexacao.md  09-IA.md  10-config.md  11-HuggingFace.md  11-servidor.md  12-arquivos-gerados.md  FAQ.md  README.md  SEGURANCA.md  exemplo_utilizacao.md
scripts/: check_env.py
src/pdfsearchable/: __init__.py  acl.py  ai_classifier.py  annotations.py  audit.py  classifier_feedback.py  cli.py  config.py  content_extractors.py  contracts.py  crypto_store.py  dedup.py  doc_diff.py  dossier.py  exceptions.py  export.py  forensics.py  formulas.py  geo_apis.py  htr.py  htr_escriptorium.py  htr_transkribus.py  hybrid_search.py  indexer.py  knowledge_graph.py  language.py  locations.py  markdown_bench.py  mcp_server.py  metrics.py  ocr.py  pdf_extended.py  pdf_processor.py  pdf_profiler.py  redaction.py  report.py  saved_searches.py  search.py  semantic_search.py  store.py  (+4 more)
src/pdfsearchable/templates/: app.html  document-view.html  graph.html  map.html  report.html  timeline.html  wordcloud.html
tests/: __init__.py  conftest.py  test_ai_classifier.py  test_content_extractors.py  test_pdf_processor.py  test_search.py
tests/acceptance/: __init__.py  test_uat.py
tests/integration/: __init__.py  test_export.py  test_report_integration.py  test_serve_http.py  test_store_integration.py  test_watch.py
tests/performance/: __init__.py  test_markdown_bench.py  test_perf.py
tests/regression/: test_regression.py
tests/security/: test_security.py
tests/system/: __init__.py  test_cli_e2e.py  test_e2e_pdf.py  test_e2e_pipeline.py
tests/unit/: __init__.py  test_ai_classifier_unit.py  test_cli_commands.py  test_config.py  test_content_extractors.py  test_exceptions.py  test_extract_dates.py  test_formulas_unit.py  test_geo_apis.py  test_htr.py  test_htr_backends.py  test_htr_routing.py  test_hybrid_search.py  test_indexer_unit.py  test_innovations.py  test_language.py  test_locations.py  test_mcp_server.py  test_mcp_server_unit.py  test_new_features.py  test_new_modules.py  test_ocr_preprocessing.py  test_pdf_extended_unit.py  test_pdf_processor.py  test_pdf_profiler.py  test_semantic_search_unit.py  test_store_ttl.py  test_store_unit.py  test_synonyms_api.py
