[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfsearchable"
version = "0.4.0"
description = "Indexe, pesquise e explore a sua coleção de PDFs — totalmente offline. OCR incorporado, enriquecimento por IA via Ollama, servidor MCP incluído."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "AnswrSe3kr" }
]
keywords = ["pdf", "search", "index", "ocr", "cli", "report", "mcp", "ollama", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "click>=8.1",
    "pymupdf>=1.24",
    "rich>=13.7",
    "wordcloud>=1.9",
    "jinja2>=3.1.2",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.2",
    "ruff>=0.8",
    # security / DevSecOps
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
]
ai = [
    "openai>=1.55",
]
wordcloud-stemming = [
    "nltk>=3.8",
]
htr = [
    "transformers>=4.40",
    "torch>=2.0",
]
tables-ocr = [
    "img2table>=1.2",
]
semantic = [
    "faiss-cpu>=1.8",
]

[project.scripts]
pdfsearchable = "pdfsearchable.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pdfsearchable = ["templates/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["**/._*", "**/.DS_Store"]

[tool.ruff.lint]
ignore = [
    # S110/S112: try-except-pass/continue — padrões defensivos intencionais;
    #            erros já são capturados e logados no nível acima quando relevante.
    "S110", "S112",
    # S310: abertura de URLs validadas (localhost Ollama, APIs externas conhecidas);
    #       justificação documentada por chamada com # nosec B310.
    "S310",
    # RUF001/002/003: traço EN (–) e símbolo ℹ são tipografia portuguesa legítima
    #                 em docstrings, comentários e strings de UI.
    "RUF001", "RUF002", "RUF003",
]
[tool.ruff.lint.per-file-ignores]
"src/pdfsearchable/cli.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
timeout = 120
timeout_method = "thread"
markers = [
    "unit: testes unitários (caixa branca).",
    "integration: testes de integração.",
    "system: testes de sistema (E2E CLI).",
    "acceptance: testes de aceitação (UAT).",
    "performance: testes de desempenho e carga.",
    "security: testes de segurança (OWASP, path traversal, injection).",
    "functional: validação funcional.",
    "regression: regressão — garante que bugs corrigidos não voltam.",
    "slow: testes lentos (requerem subprocesso com timeout real; excluídos por defeito).",
    "smoke: sanidade mínima.",
    "black_box: caixa preta.",
    "gray_box: caixa cinza.",
    "white_box: caixa branca.",
]
filterwarnings = [
    "ignore:datetime.datetime.utcnow.*:DeprecationWarning",
    "ignore:builtin type SwigPyPacked has no __module__:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__:DeprecationWarning",
]

[tool.coverage.run]
source = ["pdfsearchable"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@overload",
]
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build"]
skips = [
    "B101",   # assert statements (fine in tests/guards)
    "B311",   # random (not used for crypto)
    "B603",   # subprocess (controlled calls to tesseract/system tools)
    "B607",   # partial path (controlled)
    # B310 urlopen: all calls go through _is_safe_http_url() guard or to localhost Ollama;
    # annotated with # nosec B310 at call sites with justification
    # B615 HuggingFace: optional HTR feature; model pinned via PDFSEARCHABLE_HTR_MODEL env var;
    # annotated with # nosec B615 at call sites
]
